# AI-Scientist

./: .env.sample  .gitignore  AI-Scientist.code-workspace  README.md  launch_scientist.py  pyproject.toml  ruff.toml
ai_scientist/: generate_ideas.py  llm.py  perform_experiments.py  perform_review.py  perform_writeup.py
data/enwik8/: prepare.py
data/shakespeare_char/: prepare.py
data/text8/: prepare.py
example_papers/adaptive_dual_scale_denoising/: plot.py  run_1.py  run_2.py  run_4.py  run_5.py
example_papers/data_augmentation_grokking/: plot.py  run_1.py  run_2.py  run_3.py  run_4.py  run_5.py
example_papers/dual_expert_denoiser/: plot.py  run_1.py  run_2.py  run_3.py  run_4.py  run_5.py
example_papers/gan_diffusion/: discriminator.py  experiment.py  plot.py  run_1.py  run_2.py  run_3.py
example_papers/grid_based_noise_adaptation/: plot.py  run_1.py  run_2.py  run_3.py  run_4.py  run_5.py
example_papers/layerwise_lr_grokking/: experiment.py  plot.py  run_1.py  run_2.py  run_3.py
example_papers/mdl_grokking_correlation/: plot.py  run_3.py
example_papers/multi_style_adapter/: experiment.py  plot.py  run_1.py  run_2.py  run_3.py  run_4.py
example_papers/rl_lr_adaptation/: plot.py  q_learning_agent.py  run_1.py  run_2.py  run_5.py
example_papers/weight_initialization_grokking/: plot.py  run_1.py  run_2.py  run_3.py  run_4.py  run_5.py
experimental/: Dockerfile  launch_oe_scientist.py
review_ai_scientist/: paper_figures.ipynb
review_iclr_bench/: iclr_analysis.py  paper_figures.ipynb
templates/2d_diffusion/: ema_pytorch.py  experiment.py  plot.py
templates/grokking/: experiment.py  plot.py
templates/mobilenetV3/: experiment.py  plot.py
templates/nanoGPT/: experiment.py  plot.py
templates/nanoGPT_lite/: experiment.py  plot.py
templates/seir/: experiment.py  plot.py
templates/sketch_rnn/: experiment.py  (+2 more)
