[tool.poetry]
name = "ai-scientist"
version = "0.1.0"
description = ""
authors = ["sakana.ai"]
license = "Apache License2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
anthropic = {extras = ["vertex"], version = "^0.40.0"}
google-cloud-aiplatform = "^1.74.0"
aider-chat = "^0.67.0"
backoff = "^2.2.1"
openai = "<1.57"
matplotlib = "^3.9.3"
pypdf = "^5.1.0"
pymupdf4llm = "^0.0.17"
torch = "^2.5.1"
numpy = "<=1.26.4"
transformers = "<4.47"
datasets = "<3.1"
tiktoken = "^0.8.0"
wandb = "^0.19.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
