[tool.poetry]
name = "ai-scientist"
version = "0.1.0"
description = ""
authors = ["sakana.ai"]
license = "Apache License2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
anthropic = {extras = ["vertex"], version = "^0.40.0"}
google-cloud-aiplatform = "^1.74.0"
aider-chat = "^0.67.0"
backoff = "^2.2.1"
openai = "<1.57"
matplotlib = "^3.9.3"
pypdf = "^5.1.0"
pymupdf4llm = "^0.0.17"
torch = "^2.5.1"
numpy = "<=1.26.4"
transformers = "<4.47"
datasets = "<3.1"
tiktoken = "^0.8.0"
wandb = "^0.19.0"
tqdm = "^4.67.1"
npeet = {git = "https://github.com/gregversteeg/NPEET.git", rev = "8b0d9485423f74e5eb199324cf362765596538d3"}
einops = "^0.8.0"
torchvision = "^0.20.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pyright = "^1.1.390"
pytest = "^8.3.4"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
format = "ruff format . --config ruff.toml"
lint = "ruff check . --config ruff.toml"
typecheck = "pyright ."
test = "pytest"
ci = "task format && task lint && task typecheck && task test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
